--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ---
-layout: home
-author_profile: true
+layout: splash
+permalink: /
+header:
+  overlay_color: "#5e616c"
+  overlay_image: /assets/images/battle_splash.jpg
+excerpt: 'Tips, strategies, and recommendations for growth and success in Iron Throne'
 ---
 
