--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 ---
-layout: splash
-permalink: /
-header:
-  overlay_color: "#5e616c"
-  overlay_image: /assets/images/battle_splash.jpg
-excerpt: 'Tips, strategies, and recommendations for growth and success in Iron Throne'
+layout: home
+author_profile: true
 ---
 
