--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@ header:
   overlay_color: "#5e616c"
   overlay_image: /assets/images/battle_splash.jpg
 excerpt: 'Tips, strategies, and recommendations for growth and success in Iron Throne'
+feature_row:
+  - image_path: /assets/images/lich_mage.jpg
+    title: Tips and Strategy
+    excerpt: "Various tips and strategies to help with all aspects of the game."
+  - image_path /assets/images/castle_island.jpg
+    title: Tutorial Videos
+    excerpt: "Videos and walkthroughs explaining strategies and gameplay."
 ---
-
-{{ content }}
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
