--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@ feature_row:
     excerpt: "Videos and walkthroughs explaining strategies and gameplay."
 ---
 
-{% include feature_row id="intro" type="center" %}
+{% include feature_row type="center" %}
 
-{% include feature_row %}
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
