--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ feature_row:
   - image_path: /assets/images/lich_mage.jpg
     title: "Tips and Strategy"
     excerpt: "Various tips and strategies to help with all aspects of the game."
+    url: /pages/tips-tricks/
   - image_path: /assets/images/castle_island.jpg
     title: "Tutorial Videos"
     excerpt: "Videos and walkthroughs explaining strategies and gameplay."
