--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ header:
 excerpt: 'Tips, strategies, and recommendations for growth and success in Iron Throne'
 feature_row:
   - image_path: /assets/images/lich_mage.jpg
-    title: "Tips and Strategy"
     excerpt: "Various tips and strategies to help with all aspects of the game."
     url: /pages/tips-tricks/
+    btn_label: "Tips and Strategy"
   - image_path: /assets/images/castle_island.jpg
     title: "Tutorial Videos"
     excerpt: "Videos and walkthroughs explaining strategies and gameplay."
