--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ excerpt: 'Tips, strategies, and recommendations for growth and success in Iron T
 feature_row:
   - image_path: /assets/images/lich_mage.jpg
     excerpt: "Various tips and strategies to help with all aspects of the game."
-    url: /tips-tricks/
+    url: /tips-strategy/
     btn_label: "Tips and Strategy"
   - image_path: /assets/images/castle_island.jpg
     title: "Tutorial Videos"
