--- a/_pages/gear.html
+++ b/_pages/gear.html
@@ -5,7 +5,7 @@ permalink: /gear/
 author_profile: true
 ---
 
-{% for gear in site.collections %}
-    <h2 id="{{label | slugify }}" class="archive__subtitle">{{ gear.label }}</h2>
-    {{ label }}
+{% for gear in site.gear %}
+    <h2 id="{{label | slugify }}" class="archive__subtitle">{{ gear.title }}</h2>
+    {{ gear.excerpt }}
 {% endfor %}
