--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ feature_row:
     url: /tips-strategy/
     btn_label: "Tips and Strategy"
   - image_path: /assets/images/castle_island.jpg
-    title: "Tutorial Videos"
+    btn_label: "Tutorial Videos"
+    url: /tutorial-videos/
     excerpt: "Videos and walkthroughs explaining strategies and gameplay."
 ---
 
