--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ feature_row:
     btn_label: "Tips and Strategy"
   - image_path: /assets/images/castle_island.jpg
     btn_label: "Tutorial Videos"
-    url: /tutorial-videos/
+    url: /vids/
     excerpt: "Videos and walkthroughs explaining strategies and gameplay."
 ---
 
